--- a/app/src/assets/scss/_layout.scss
+++ b/app/src/assets/scss/_layout.scss
@@ -6,15 +6,39 @@ html {
 body {
   margin: 0;
   font-family: 'Maven Pro', sans-serif;
-  // background-color: #333;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 main {
-  transition: all .4s ease;
-  width: 100%;
+  position: relative;
+  // transition: all .4s ease;
+  width: 80vw;
+  min-width: 320px;
+  max-width: 1000px;
+  // &:after { padding-bottom: 86.6025403784439%; }
+  // &:after { padding-bottom: 115.4700538379251%; }
+  padding-bottom: 86.6025403784439%;
+  &>div {
+    width: 100%;
+    height: 100%;
+    position: absolute
+  }
 }
 
 // Grid
+
+.hex-grid {
+  transition: margin .4s ease;
+  &.cell-1 { margin: -10% 25% 0 -25%; }
+  &.cell-2 { margin: -10% 50% 0 -50%; }
+  &.cell-3 { margin: -10% 75% 0 -75%; }
+  &.cell-4 { margin: -10% 100% 0 -100%; }
+  &.cell-5 { margin: -35% 15% 0 -15%; }
+  &.cell-home { margin: -90% 75% 0 -75% }
+}
 
 .hex-grid .content {
   color: #fff;
@@ -26,6 +50,14 @@ main {
   height: 100%;
   &.resp-image img { width: 100%; }
   .title, img { user-select: none; }
+}
+
+.cell-bg {
+  fill: #979797;
+  // stroke: #979797;
+  &:hover {
+    fill: #D4D4D4;
+  }
 }
 
 // Navigation
