--- a/app/src/assets/scss/_hexagon_grid.scss
+++ b/app/src/assets/scss/_hexagon_grid.scss
@@ -3,17 +3,9 @@ $default_start: 'up';
 $default_types: 'inner', 'outer';
 $default_color: #4671D5;
 
-@mixin hexagon-grid-lying($cols, $gap, $color: $default_color) {
-  @include hexagon-grid($cols, $gap, 'lying', $default_start, 'inner', $color);
-}
-
-@mixin hexagon-grid-standing($cols, $gap, $color: $default_color) {
-  @include hexagon-grid($cols, $gap, 'standing', $default_start, 'inner', $color);
-}
-
 @mixin hexagon-grid($cols, $gap, $orientations: $default_orientations, $start: $default_start, $types: $default_types, $color: $default_color) {
   $start_direction: if($start == $default_start, 1, -1);
-  .hex-grid {
+  main {
     display: grid;
     grid-template-columns: repeat($cols, 100%);
     .content {
@@ -61,71 +53,28 @@ $default_color: #4671D5;
         .hex-bg-1, .hex-bg-2 { transform: rotate(-60deg); }
       }
     }
-    @if(index($orientations, 'lying')) {
-      &.lying {
-        .hex-cell {
-          &:after { padding-bottom: 115.4700538379251%; }
-          @if $cols % 2 == 0 {
-            &:nth-child(even) { @include cell-offset($start_direction * -1, $gap, 'lying'); }
-            &:nth-child(odd) { @include cell-offset($start_direction, $gap, 'lying'); }
-          }@else{
-            @for $i from 1 through $cols {
-              &:nth-child(#{$cols}n+#{$i}) {
-                @if $i % 2 == 0 {
-                  @include cell-offset($start_direction * -1, $gap, 'lying');
-                }@else{
-                  @include cell-offset($start_direction, $gap, 'lying');
-                }
-              }
-            }
-          }
-        }
-        .hex-bg {
-          @if(index($types, 'inner')) {
-            &.inner {
-              height: 100%;
-              left: 50%;
-              margin-left: calc(50% / -1.5);
-              width: calc(100% / 1.5);
-            }
-          }
-          @if(index($types, 'outer')) {
-            &.outer {
-              height: 100%;
-              left: -18.5%;
-              transform: rotate(120deg);
-              width: 136.6025403784439%;
-            }
-          }
+    .hex-cell {
+      &:after { padding-bottom: 86.6025403784439%; }
+      @for $i from 1 through $cols {
+        &:nth-child(#{$cols * 2}n+#{$i}) { @include cell-offset($start_direction, $gap, 'standing'); }
+        &:nth-child(#{$cols * 2}n+#{$i+$cols}) { @include cell-offset($start_direction * -1, $gap, 'standing'); }
+      }    
+    }
+    .hex-bg {
+      @if(index($types, 'inner')) {
+        &.inner {
+          height: calc(100% / 1.5);
+          margin-top: calc(50% / -1.732050807568877);
+          width: 100%;
+          top: 50%;
         }
       }
-    }
-    @if(index($orientations, 'standing')) {
-      &.standing {
-        .hex-cell {
-          &:after { padding-bottom: 86.6025403784439%; }
-          @for $i from 1 through $cols {
-            &:nth-child(#{$cols * 2}n+#{$i}) { @include cell-offset($start_direction, $gap, 'standing'); }
-            &:nth-child(#{$cols * 2}n+#{$i+$cols}) { @include cell-offset($start_direction * -1, $gap, 'standing'); }
-          }    
-        }
-        .hex-bg {
-          @if(index($types, 'inner')) {
-            &.inner {
-              height: calc(100% / 1.5);
-              margin-top: calc(50% / -1.732050807568877);
-              width: 100%;
-              top: 50%;
-            }
-          }
-          @if(index($types, 'outer')) {
-            &.outer {
-              height: 136.6025403784439%;
-              top: -18.5%;
-              transform: rotate(120deg);
-              width: 100%;
-            }
-          }
+      @if(index($types, 'outer')) {
+        &.outer {
+          height: 136.6025403784439%;
+          top: -18.5%;
+          transform: rotate(120deg);
+          width: 100%;
         }
       }
     }
