--- a/app/src/assets/scss/_layout.scss
+++ b/app/src/assets/scss/_layout.scss
@@ -12,10 +12,10 @@ body {
   justify-content: center;
 }
 
-main {
+.view-box {
   position: relative;
   // transition: all .4s ease;
-  width: 80vw;
+  width: 100%;
   min-width: 320px;
   max-width: 1000px;
   // &:after { padding-bottom: 86.6025403784439%; }
@@ -30,17 +30,24 @@ main {
 
 // Grid
 
-.hex-grid {
-  transition: margin .4s ease;
-  &.cell-1 { margin: -10% 25% 0 -25%; }
-  &.cell-2 { margin: -10% 50% 0 -50%; }
-  &.cell-3 { margin: -10% 75% 0 -75%; }
-  &.cell-4 { margin: -10% 100% 0 -100%; }
-  &.cell-5 { margin: -35% 15% 0 -15%; }
-  &.cell-home { margin: -90% 75% 0 -75% }
+main {
+  // transition: margin .4s ease;
+  transition: all 1s cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
+  transition-timing-function: cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
+  margin: -102.5% 75% 0 -75%;
+  &.cell-1 { margin: -15% 25% 0 -25%; }
+  &.cell-2 { margin: -15% 125% 0 -125%; }
+  &.cell-3 { margin: -15% 225% 0 -225%; }
+  &.cell-4 { margin: -102.5% -25% 0 25%; }
+  // &.cell-home { margin: -90% 75% 0 -75% }
+  &.cell-5 { margin: -102.5% 175% 0 -175%; }
+  &.cell-6 { margin: -102.5% 275% 0 -275%; }
+  &.cell-7 { margin: -190% 25% 0 -25%; }
+  &.cell-8 { margin: -190% 125% 0 -125%; }
+  &.cell-9 { margin: -190% 225% 0 -225%; }
 }
 
-.hex-grid .content {
+main .content {
   color: #fff;
   display: flex;
   align-items: center;
