--- a/app/src/assets/scss/_layout.scss
+++ b/app/src/assets/scss/_layout.scss
@@ -22,6 +22,18 @@ a {
   }
 }
 
+
+
+.hex-cell {
+  transition: filter 1s ease;
+  filter: blur(5px);
+  pointer-events: none;
+  &.active {
+    filter: blur(0);
+    pointer-events: auto;
+  }
+}
+
 .home {
   position: fixed;
   top: 5px;
@@ -59,16 +71,16 @@ main {
   transition: all 1s cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
   transition-timing-function: cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
   margin: -102.5% 75% 0 -75%;
-  &.cell-1 { margin: -15% 25% 0 -25%; }
-  &.cell-2 { margin: -15% 125% 0 -125%; }
-  &.cell-3 { margin: -15% 225% 0 -225%; }
-  &.cell-4 { margin: -102.5% -25% 0 25%; }
-  // &.cell-home { margin: -90% 75% 0 -75% }
-  &.cell-5 { margin: -102.5% 175% 0 -175%; }
-  &.cell-6 { margin: -102.5% 275% 0 -275%; }
-  &.cell-7 { margin: -190% 25% 0 -25%; }
-  &.cell-8 { margin: -190% 125% 0 -125%; }
-  &.cell-9 { margin: -190% 225% 0 -225%; }
+  &.cell1 { margin: -15% 25% 0 -25%; }
+  &.cell2 { margin: -15% 125% 0 -125%; }
+  &.cell3 { margin: -15% 225% 0 -225%; }
+  &.cell4 { margin: -102.5% -25% 0 25%; }
+  // &.home { margin: -90% 75% 0 -75% }
+  &.cell5 { margin: -102.5% 175% 0 -175%; }
+  &.cell6 { margin: -102.5% 275% 0 -275%; }
+  &.cell7 { margin: -190% 25% 0 -25%; }
+  &.cell8 { margin: -190% 125% 0 -125%; }
+  &.cell9 { margin: -190% 225% 0 -225%; }
 }
 
 main .content {
