--- a/app/src/assets/scss/_layout.scss
+++ b/app/src/assets/scss/_layout.scss
@@ -6,7 +6,12 @@ html {
 body {
   margin: 0;
   font-family: 'Maven Pro', sans-serif;
+}
+
+.view-box-wrapper {
+  position: relative;
   overflow: hidden;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,8 +27,6 @@ a {
   }
 }
 
-
-
 .hex-cell {
   transition: filter 1s ease;
   filter: blur(5px);
@@ -34,11 +37,17 @@ a {
   }
 }
 
-.home {
+.brand {
   position: fixed;
   top: 5px;
   left: 5px;
   z-index: 1000;
+  h1 {
+    color: #4671D5; //#1240AB; //#2A4480;
+    display: inline-block;
+    margin: 0 0 0 6px;
+    vertical-align: middle;
+  }
 }
 
 .view-box {
@@ -49,11 +58,12 @@ a {
   max-width: 1000px;
   // &:after { padding-bottom: 86.6025403784439%; }
   // &:after { padding-bottom: 115.4700538379251%; }
-  padding-bottom: 86.6025403784439%;
+  padding-bottom: 115.4700538379251%;
   &>div {
     width: 100%;
-    height: 100%;
-    position: absolute
+    height: 75%;
+    position: absolute;
+    top: 12.5%;
   }
 }
 
@@ -70,17 +80,17 @@ main {
   // transition: margin .4s ease;
   transition: all 1s cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
   transition-timing-function: cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
-  margin: -102.5% 75% 0 -75%;
-  &.cell1 { margin: -15% 25% 0 -25%; }
-  &.cell2 { margin: -15% 125% 0 -125%; }
-  &.cell3 { margin: -15% 225% 0 -225%; }
-  &.cell4 { margin: -102.5% -25% 0 25%; }
+  margin: -100% 75% 0 -75%;
+  &.cell1 { margin: -14% 25% 0 -25%; }
+  &.cell2 { margin: -14% 125% 0 -125%; }
+  &.cell3 { margin: -14% 225% 0 -225%; }
+  &.cell4 { margin: -100% -25% 0 25%; }
   // &.home { margin: -90% 75% 0 -75% }
-  &.cell5 { margin: -102.5% 175% 0 -175%; }
-  &.cell6 { margin: -102.5% 275% 0 -275%; }
-  &.cell7 { margin: -190% 25% 0 -25%; }
-  &.cell8 { margin: -190% 125% 0 -125%; }
-  &.cell9 { margin: -190% 225% 0 -225%; }
+  &.cell5 { margin: -100% 175% 0 -175%; }
+  &.cell6 { margin: -100% 275% 0 -275%; }
+  &.cell7 { margin: -188% 25% 0 -25%; }
+  &.cell8 { margin: -188% 125% 0 -125%; }
+  &.cell9 { margin: -188% 225% 0 -225%; }
 }
 
 main .content {
@@ -96,7 +106,7 @@ main .content {
 }
 
 .cell-bg {
-  fill: #979797;
+  fill: #FFD073;
   // stroke: #979797;
   // &:hover {
   //   fill: #D4D4D4;
