--- a/app/src/assets/scss/_layout.scss
+++ b/app/src/assets/scss/_layout.scss
@@ -59,12 +59,16 @@ a {
   max-width: 1000px;
   // &:after { padding-bottom: 86.6025403784439%; }
   // &:after { padding-bottom: 115.4700538379251%; }
-  padding-bottom: 115.4700538379251%;
+  &>div>div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    // top: 12.5%;
+  }
   &>div {
     width: 100%;
-    height: 75%;
-    position: absolute;
-    top: 12.5%;
+    position: relative;
+    padding-bottom: 115.4700538379251%;
   }
 }
 
@@ -81,17 +85,17 @@ main {
   // transition: margin .4s ease;
   transition: all 1s cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
   transition-timing-function: cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
-  margin: -100% 75% 0 -75%;
-  &.cell1 { margin: -14% 25% 0 -25%; }
-  &.cell2 { margin: -14% 125% 0 -125%; }
-  &.cell3 { margin: -14% 225% 0 -225%; }
-  &.cell4 { margin: -100% -25% 0 25%; }
+  margin: -87% 75% 0 -75%;
+  &.cell1 { margin: 0 25% 0 -25%; }
+  &.cell2 { margin: 0 125% 0 -125%; }
+  &.cell3 { margin: 0 225% 0 -225%; }
+  &.cell4 { margin: -87% -25% 0 25%; }
   // &.home { margin: -90% 75% 0 -75% }
-  &.cell5 { margin: -100% 175% 0 -175%; }
-  &.cell6 { margin: -100% 275% 0 -275%; }
-  &.cell7 { margin: -188% 25% 0 -25%; }
-  &.cell8 { margin: -188% 125% 0 -125%; }
-  &.cell9 { margin: -188% 225% 0 -225%; }
+  &.cell5 { margin: -87% 175% 0 -175%; }
+  &.cell6 { margin: -87% 275% 0 -275%; }
+  &.cell7 { margin: -174% 25% 0 -25%; }
+  &.cell8 { margin: -174% 125% 0 -125%; }
+  &.cell9 { margin: -174% 225% 0 -225%; }
 }
 
 main .content {
