--- a/app/src/assets/scss/styles.scss
+++ b/app/src/assets/scss/styles.scss
@@ -19,11 +19,13 @@ $col_offset: -50;
 $cells: @@cells@@;
 
 main {
-  // transition: margin .4s ease;
-  // transition: all 1s cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
-  // transition-timing-function: cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
-  transition: all 500ms cubic-bezier(0.675, -0.280, 0.260, 1.295); /* custom */
-  transition-timing-function: cubic-bezier(0.675, -0.280, 0.260, 1.295); /* custom */
+  transition: all 500ms cubic-bezier(0.675, -0.280, 0.260, 1.295);
+  transition-timing-function: cubic-bezier(0.675, -0.280, 0.260, 1.295);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 main {
