--- a/app/src/assets/scss/_layout.scss
+++ b/app/src/assets/scss/_layout.scss
@@ -29,11 +29,14 @@ a {
 }
 
 .hex-cell {
-  transition: filter 1s ease;
+  // transition: opacity 1s ease;
+  opacity: .5;
+  transition: all 1s ease;
   filter: blur(5px);
   pointer-events: none;
   &.active {
     filter: blur(0);
+    opacity: .95;
     pointer-events: auto;
   }
   a {
