--- a/app/src/assets/scss/_layout.scss
+++ b/app/src/assets/scss/_layout.scss
@@ -8,17 +8,26 @@ body {
   font-family: 'Maven Pro', sans-serif;
 }
 
-a.impressum-link {
+a.dark {
+  &:link, &:visited, &:active, &:hover {
+    color: #4671D5;
+    &:hover {
+      color: #3661C5;
+    }
+  }
+}
+
+a.impressum-link, 
+a.copywrite-link {
   position: fixed;
   bottom: 10px;
   right: 10px;
   display: block;
-  &:link, &:visited, &:active, &:hover {
-    color: #4671D5;
-  }
-  &:hover {
-    color: #3661C5;
-  }
+}
+
+a.copywrite-link {
+  right: auto;
+  left: 10px;
 }
 
 .view-box-wrapper {
@@ -86,7 +95,7 @@ a {
   // transition: all .4s ease;
   width: 100%;
   min-width: 320px;
-  max-width: 1000px;
+  max-width: 900px;
   // &:after { padding-bottom: 86.6025403784439%; }
   // &:after { padding-bottom: 115.4700538379251%; }
   &>div>div {
