--- a/app/src/assets/scss/_layout.scss
+++ b/app/src/assets/scss/_layout.scss
@@ -78,7 +78,7 @@ a {
         fill: #eee;
       }
       path {
-        opacity: .2;
+        opacity: .1;
       }
     }
   }
@@ -94,7 +94,7 @@ a {
   left: 5px;
   z-index: 1000;
   h1 {
-    color: #4671D5; //#1240AB; //#2A4480;
+    color: #4671D5;
     display: inline-block;
     margin: 0 0 0 6px;
     vertical-align: middle;
@@ -103,12 +103,9 @@ a {
 
 .view-box {
   position: relative;
-  // transition: all .4s ease;
   width: 100%;
-  min-width: 320px;
-  max-width: 800px;
-  // &:after { padding-bottom: 86.6025403784439%; }
-  // &:after { padding-bottom: 115.4700538379251%; }
+  min-width: $cell_min_width;
+  max-width: $cell_max_width;
   &>div>div {
     width: 100%;
     height: 100%;
@@ -120,13 +117,6 @@ a {
     position: relative;
     padding-bottom: 115.4700538379251%;
   }
-}
-
-.hex-cell section {
-  position: absolute;
-  z-index: 900;
-  top: 50%;
-  left: 50%;
 }
 
 // Grid
@@ -145,11 +135,4 @@ main .content {
 
 .cell-bg {
   fill: #FFD073;
-  // stroke: #979797;
-  // &:hover {
-  //   fill: #D4D4D4;
-  // }
 }
-
-// Navigation
-
